# eye-of-emergency

./: README.md  pyproject.toml
data/train/: test_tweets.csv
exploratory/: analysis.ipynb  clean.ipynb  cleaning.py  compare_models.ipynb  results.csv  tweet.py
exploratory/conf/: config.json  config.py
exploratory/scripts/: cleaning.py  compare_models.py  nlp_cleaning.py  tweet.py  tweet_analysis.py
exploratory/scripts/models/: nltk_clean.py  spacy_clean.py
tree_models/: pyproject.toml
tree_models/tree_models/: decision_tree.py  random_forest.py
watch/: watch.md
