[tool.poetry]
name = "eye-of-emergency"
version = "0.1.0"
description = "ML Project tweet classification"
authors = ["handriamaromanana <hugo.andriamaromanana@volta-medical.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.0"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
loguru = "^0.7.2"
icecream = "^2.1.3"
ipython = "^8.26.0"
black = {extras = ["jupyter"], version = "^24.4.2"}
pydantic = "^2.8.2"
pandera = {extras = ["mypy"], version = "^0.20.1"}
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.6.0/en_core_web_sm-3.6.0.tar.gz"}
pyarrow = "^16.1.0"
contractions = "^0.1.73"
scikit-learn = "^1.5.1"


[tool.poetry.group.dev]
optional = true


[tool.poetry.group.dev.dependencies]
icecream = "*"

[tool.poetry.group.ci.dependencies]
black = { version = "*", allow-prereleases = true }
isort = "*"
ruff = "*"
mypy = "*"
# Stubs
pandas-stubs = "*"
types-pyyaml = "*"


[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "*"

[tool.isort]
profile = "black"

[tool.ruff]
exclude = ["docs", "archive"]
lint.select = ["E", "F", "W", "C90", "I", "D", "UP", "PD", "PL"]
lint.ignore = ["D104", "D107", "D205", "D415"]
lint.pydocstyle.convention = "google"
lint.pylint.max-args = 8
lint.mccabe.max-complexity = 5

[tool.mypy]
files = ["exploration", "model"]
strict = true
namespace_packages = true
explicit_package_bases = true
disallow_untyped_calls = false


[[tool.mypy.overrides]]
module = [
    "smart_open.*",
    "icecream.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=eye-of-emergency --cov-report=html --cov-report term-missing --cov-fail-under=0"  # --cov-fail-under=100 to be achieved!
testpaths = ["tests/"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
